@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0545d8858815704ef8fddb45bf589f46eedd97ec8e00f0e6baa11aa14082ad72"
+  "signature": "sha256:2c770577ce60ea3d4dcfbb2d2a4c0c8d55523e82938f65f8d9795523dd070167"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -269,17 +269,18 @@
       "from sklearn.base import BaseEstimator\n",
       "from sklearn.base import ClassifierMixin\n",
       "from sklearn.base import TransformerMixin\n",
+      "from sklearn.preprocessing import LabelEncoder\n",
       "import numpy as np\n",
       "import operator\n",
       "\n",
       "class EnsembleClassifier(BaseEstimator, ClassifierMixin, TransformerMixin):\n",
       "    \"\"\" \n",
-      "    Soft Voting/Majority Rule ensemble classifier for scikit-learn estimators.\n",
+      "    Soft Voting/Majority Rule classifier for classification estimators.\n",
       "        \n",
       "    Parameters\n",
       "    ----------\n",
       "    clfs : array-like, shape = [n_classifiers]\n",
-      "      A list of scikit-learn classifier objects.\n",
+      "      A list of estimators for classification.\n",
       "      \n",
       "    voting : str, {'hard', 'soft'} (default='hard')\n",
       "      If 'hard', uses predicted class labels for majority rule voting.\n",
@@ -289,8 +290,7 @@
       "    weights : array-like, shape = [n_classifiers], optional (default=`None`)\n",
       "      Sequence of weights (`float` or `int`) that are multiplied with the \n",
       "      predicted class probabilities before averaging if `voting='soft'` \n",
-      "      (weights are ignored if `voting='hard'`).\n",
-      "      Assumes equal weights if `None`.\n",
+      "      Uses uniform weights if `None`.\n",
       "        \n",
       "    Attributes\n",
       "    ----------\n",
@@ -299,7 +299,33 @@
       "       \n",
       "    probas_ : array, shape = [n_probabilities, n_classifiers]\n",
       "        Predicted probabilities by each classifier if `weights=array-like`.\n",
-      "      \n",
+      "        \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> import numpy as np\n",
+      "    >>> from sklearn.linear_model import LogisticRegression\n",
+      "    >>> from sklearn.naive_bayes import GaussianNB \n",
+      "    >>> from sklearn.ensemble import RandomForestClassifier\n",
+      "    >>> np.random.seed(123)\n",
+      "    >>> clf1 = LogisticRegression()\n",
+      "    >>> clf2 = RandomForestClassifier()\n",
+      "    >>> clf3 = GaussianNB()\n",
+      "    >>> X = np.array([[-1, -1], [-2, -1], [-3, -2], [1, 1], [2, 1], [3, 2]])\n",
+      "    >>> y = np.array([1, 1, 1, 2, 2, 2])\n",
+      "    >>> eclf1 = EnsembleClassifier(estimators=[clf1, clf2, clf3], voting='hard')\n",
+      "    >>> eclf1 = eclf1.fit(X, y)\n",
+      "    >>> print(eclf1.predict(X))\n",
+      "    [1 1 1 2 2 2]\n",
+      "    >>> eclf2 = EnsembleClassifier(estimators=[clf1, clf2, clf3], voting='soft')\n",
+      "    >>> eclf2 = eclf2.fit(X, y)\n",
+      "    >>> print(eclf2.predict(X))\n",
+      "    [1 1 1 2 2 2]\n",
+      "    >>> eclf3 = EnsembleClassifier(estimators=[clf1, clf2, clf3], voting='soft', weights=[2,1,1])\n",
+      "    >>> eclf3 = eclf3.fit(X, y)\n",
+      "    >>> print(eclf3.predict(X))\n",
+      "    [1 1 1 2 2 2]\n",
+      "    >>>\n",
+      "\n",
       "    \"\"\"\n",
       "    def __init__(self, clfs, voting='hard', weights=None):\n",
       "        self.clfs = clfs\n",
@@ -314,10 +340,13 @@
       "            raise ValueError('Number of classifiers and weights must be equal')      \n",
       "        \n",
       "        self.weights = weights\n",
+      "        self.le = LabelEncoder()\n",
+      "\n",
+      "\n",
       "\n",
       "    def fit(self, X, y):\n",
       "        \"\"\" \n",
-      "        Fits the scikit-learn estimators.\n",
+      "        Fits the estimators.\n",
       "        \n",
       "        Parameters\n",
       "        ----------\n",
@@ -335,6 +364,9 @@
       "        \"\"\"\n",
       "        for clf in self.clfs:\n",
       "            clf.fit(X, y)\n",
+      "        \n",
+      "        self.le.fit(y)\n",
+      "        \n",
       "        return self\n",
       "            \n",
       "    def predict(self, X):\n",
@@ -353,17 +385,25 @@
       "        \"\"\"\n",
       "        if self.voting == 'soft':\n",
       "            avg = self.predict_proba(X)\n",
-      "            maj = np.apply_along_axis(lambda x: max(enumerate(x), key=operator.itemgetter(1))[0], axis=1, arr=avg)\n",
+      "            maj = self.le.inverse_transform(np.argmax(avg, axis=1))\n",
       "        \n",
       "        else: # 'hard' voting\n",
-      "            self.classes_ = self._get_classes(X)\n",
-      "            maj = np.asarray([np.argmax(np.bincount(self.classes_[:,c])) for c in range(self.classes_.shape[1])]) \n",
+      "            self.classes_ = self._predict(X)\n",
+      "            \n",
+      "            # arange class labels as [n_class_labels, n_classifier_predictions]\n",
+      "            self.classes_ = np.asarray([self.classes_[:,c] for c in range(self.classes_.shape[1])])\n",
+      "            \n",
+      "            # duplicate class labels if weights are provided for argmax majority rule\n",
+      "            if self.weights:\n",
+      "                self.classes_ = np.concatenate([np.tile(self.classes_[:,c,None], w)\n",
+      "                                        for w,c in zip(self.weights, range(self.classes_.shape[1]))], axis=1)\n",
+      "\n",
+      "            maj = np.apply_along_axis(lambda x: np.argmax(np.bincount(x)), axis=1, arr=self.classes_)\n",
       "        \n",
       "        return maj\n",
       "            \n",
       "    \n",
       "    def predict_proba(self, X):\n",
-      "        \n",
       "        \"\"\"\n",
       "        Parameters\n",
       "        ----------\n",
@@ -377,7 +417,7 @@
       "            Weighted average probability for each class per sample.\n",
       "        \n",
       "        \"\"\"\n",
-      "        self.probas_ = self._get_probas(X)\n",
+      "        self.probas_ = self._predict_probas(X)\n",
       "        avg = np.average(self.probas_, axis=0, weights=self.weights)\n",
       "        \n",
       "        return avg\n",
@@ -403,15 +443,15 @@
       "        \n",
       "        \"\"\"\n",
       "        if self.weights:\n",
-      "            return self._get_probas(X)\n",
+      "            return self._predict_probas(X)\n",
       "        else:\n",
-      "            return self._get_classes(X)  \n",
+      "            return self._predict(X)  \n",
       "    \n",
-      "    def _get_classes(self, X):\n",
+      "    def _predict(self, X):\n",
       "        \"\"\" Collects results from clf.predict calls. \"\"\"\n",
       "        return np.asarray([clf.predict(X) for clf in self.clfs])\n",
       "        \n",
-      "    def _get_probas(self, X):\n",
+      "    def _predict_probas(self, X):\n",
       "        \"\"\" Collects results from clf.predict calls. \"\"\"\n",
       "        return np.asarray([clf.predict_proba(X) for clf in self.clfs])"
      ],
@@ -508,90 +548,6 @@
       }
      ],
      "prompt_number": 7
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "<br>\n",
-      "<br>"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {},
-     "source": [
-      "Additional Note About the EnsembleClassifier Implementation: Class Labels vs. Probabilities"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "[[back to top](#Sections)]"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "You might be wondering why I implemented the `EnsembleClassifier` class so that it applies the majority voting purely on the class labels if no weights are provided and is the predicted probability values otherwise. \n",
-      "\n",
-      "Let's consider the following scenario:\n",
-      "\n",
-      "#### 1) Prediction based on majority class labels:\n",
-      "\n",
-      "\n",
-      "| classifier      | class 1  | class 2  | \n",
-      "|-----------------|----------|----------|\n",
-      "| classifier 1    |     1 |      0|  \n",
-      "| classifier 2    |     0 |      1| \n",
-      "| classifier 3    |     0 |      1| \n",
-      "| prediction      |     - |       1|\n",
-      "\n",
-      "To achieve this behavior, initialize the `EnsembleClassifier` like this: \n",
-      "\n",
-      "    eclf = EnsembleClassifier(clfs=[clf1, clf2, clf3])\n",
-      "\n",
-      "\n",
-      "\n",
-      "#### 2) Prediction based on predicted probabilities (equal weights, `weights=[1,1,1]`)\n",
-      "\n",
-      "| classifier      | class 1  | class 2  | \n",
-      "|-----------------|----------|----------|\n",
-      "| classifier 1    |     0.99 |      0.01|  \n",
-      "| classifier 2    |     0.49 |      0.51| \n",
-      "| classifier 3    |     0.49 |      0.51| \n",
-      "| weighted average| 0.66     | 0.18     |\n",
-      "| prediction      | 1        | -        |\n",
-      "\n",
-      "To achieve this behavior, initialize the `EnsembleClassifier` like this: \n",
-      "\n",
-      "    eclf = EnsembleClassifier(clfs=[clf1, clf2, clf3], voting='soft')\n",
-      "\n",
-      "Different weights can be provided explicitely via the `weights` parameter:\n",
-      "\n",
-      "\n",
-      "    eclf = EnsembleClassifier(clfs=[clf1, clf2, clf3], voting='soft', weights=[10,1,2])"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "<br>\n",
-      "<br>"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "As we can see, the results are different depending on whether we apply a majority vote based on the class labels or take the average of the predicted probabilities. In general, I think it makes more sense to use the predicted probabilities (scenario 2). Here, the \"very confident\" classifier 1 overules the very unconfident classifiers 2 and 3. \n",
-      "\n",
-      "The reason for the different behaviors is that not all classifiers in scikit-learn support the `predict_proba` method. In this case, the `EnsembleClassifier` can still be used just based on the class labels if no weights are provided as parameter."
-     ]
     },
     {
      "cell_type": "markdown",
